--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <script>
       var socket = io();
       $('form').submit(function(){
-        socket.emit('chat message', $('#m').val());
+        socket.emit('update', $('#m').val());
         $('#m').val('');
         return false;
       });
-      socket.on('chat message', function(msg){
-        $('#messages').append($('<li>').text(msg));
+      socket.on('update', function(data){
+        $('#messages').append($('<li>').text(data));
       });
     </script>
   </body>
