Feeds data through node websocket to the x value of the generated chart

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             axes: ['left', 'bottom', 'right']
         });
 
-        chart.push(data.next());
+        chart.push(data.next(time));
 
       });
 
